# libedgeless

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  crypto.cpp
.github/workflows/: unittests.yml
include/: buffer.h  crypto.h  ecrypto.h
include/edgeless/: buffer.h  crypto.h
src/: crypto.cc  crypto_test.cc  ecrypto.cpp
tests/: crypto_test.cc  test_crypto.cc  test_crypto.cpp  test_ecrypto.cpp
